prod_snapshot_2015-09-24_1030/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Status_Bus_Days_3__c</fullName>
        <formula>IF( 
MOD(( Status_Change_Date__c ) - DATE(2000,1,4),7)=0,Status_Change_Date__c +6, 
IF(MOD((Status_Change_Date__c ) - DATE(2000,1,5),7)=0,Status_Change_Date__c +6, 
IF(MOD((Status_Change_Date__c ) - DATE(2000,1,6),7)=0,Status_Change_Date__c +6, 
IF(MOD((Status_Change_Date__c ) - DATE(2000,1,7),7)=0,Status_Change_Date__c +6, 
IF(MOD((Status_Change_Date__c ) - DATE(2000,1,8),7)=0,Status_Change_Date__c +5, 
IF(MOD((Status_Change_Date__c ) - DATE(2000,1,9),7)=0,Status_Change_Date__c +4, 
Status_Change_Date__c +4 
) 
) 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Bus Days 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Bus_Days_7__c</fullName>
        <formula>IF( 
MOD(( Status_Change_Date__c ) - DATE(2000,1,4),7)=0,Status_Change_Date__c +10, 
IF(MOD((Status_Change_Date__c ) - DATE(2000,1,5),7)=0,Status_Change_Date__c +10, 
IF(MOD((Status_Change_Date__c ) - DATE(2000,1,6),7)=0,Status_Change_Date__c +10, 
IF(MOD((Status_Change_Date__c ) - DATE(2000,1,7),7)=0,Status_Change_Date__c +10, 
IF(MOD((Status_Change_Date__c ) - DATE(2000,1,8),7)=0,Status_Change_Date__c +9, 
IF(MOD((Status_Change_Date__c ) - DATE(2000,1,9),7)=0,Status_Change_Date__c +8, 
Status_Change_Date__c +8 
) 
) 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Bus Days 7</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Change_Date__c</fullName>
        <label>Status Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Last_Waiting_Set_Date__c</fullName>
        <label>Wait Set Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Last_Waiting_UnSet_Date__c</fullName>
        <description>Used To Track Time of When Status came OUT of a Waiting Stage.</description>
        <label>Wait UnSet Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Text__c</fullName>
        <formula>TEXT(Waiting_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Waiting_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status Waiting Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Workflow_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Workflow Box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_In_Current_Status_Days__c</fullName>
        <description>+ ((FLOOR((Today() -  Status_Change_Date__c)-2)/7))</description>
        <formula>IF( 
MOD(( Status_Change_Date__c ) - DATE(2000,1,4),7)=0,
IF(Today() -  Status_Change_Date__c &lt;= 3,Today() -  Status_Change_Date__c,(Today() -  Status_Change_Date__c) - (FLOOR(Today() -  Status_Change_Date__c)/7) * 2) + 1, 


IF(MOD((Status_Change_Date__c ) - DATE(2000,1,5),7)=0,
IF(Today() -  Status_Change_Date__c &lt;= 2,Today() -  Status_Change_Date__c,(Today() -  Status_Change_Date__c) - (FLOOR(Today() -  Status_Change_Date__c)/7) * 2), 


IF(MOD((Status_Change_Date__c ) - DATE(2000,1,6),7)=0,
IF(Today() -  Status_Change_Date__c &lt;= 1,Today() -  Status_Change_Date__c,(Today() -  Status_Change_Date__c) - (FLOOR(Today() -  Status_Change_Date__c)/7) * 2), 


IF(MOD((Status_Change_Date__c ) - DATE(2000,1,7),7)=0,
IF(Today() -  Status_Change_Date__c = 0,Today() -  Status_Change_Date__c,(Today() -  Status_Change_Date__c) - (FLOOR(Today() -  Status_Change_Date__c)/7) * 2), 


IF(MOD((Status_Change_Date__c ) - DATE(2000,1,8),7)=0,
IF(Today() -  Status_Change_Date__c &lt; 3,0,(Today() -  Status_Change_Date__c) - (FLOOR(Today() -  Status_Change_Date__c)/7) * 2), 


IF(MOD((Status_Change_Date__c ) - DATE(2000,1,9),7)=0,
IF(Today() -  Status_Change_Date__c &lt; 2,0,(Today() -  Status_Change_Date__c) - (FLOOR(Today() -  Status_Change_Date__c)/7) * 2), 


IF(Today() -  Status_Change_Date__c &lt; 5,(Today() -  Status_Change_Date__c),(Today() -  Status_Change_Date__c) - (FLOOR(Today() -  Status_Change_Date__c)/7) * 2) + ((FLOOR(Today() -  Status_Change_Date__c)/7)-1)
) 
) 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bus Days (In Status)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_To_Deliver__c</fullName>
        <formula>IF(NOT(ISNULL(Live_Date__c)),Live_Date__c - Opportunity.Closed_Won_Time_Stamp__c,
IF(NOT(ISNULL( Fulfilled_Date__c)),Fulfilled_Date__c- Opportunity.Closed_Won_Time_Stamp__c,NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time To Deliver</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalMonthlyCharge__c</fullName>
        <formula>UnitPrice  + (UnitPrice  *  Mgmt_Fee_Percent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Monthly Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPrice_Probability_Formula__c</fullName>
        <formula>UnitPrice * Opportunity.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The formula is Actual Price * Probability</inlineHelpText>
        <label>Forecast Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Upsell__c</fullName>
        <label>Upsell?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Waiting_Age__c</fullName>
        <formula>Now() -  Status_Last_Waiting_Set_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Waiting Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Waiting_Status_Descr__c</fullName>
        <label>Status Descr/Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waiting_Status_Options_Before__c</fullName>
        <label>Status Options</label>
        <picklist>
            <picklistValues>
                <fullName>Closed Won</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Waiting_Status_Options__c</fullName>
        <label>Status Options</label>
        <picklist>
            <controllingField>Waiting_Status__c</controllingField>
            <picklistValues>
                <fullName>Awaiting Onboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting On Client Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting On Client Resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfilled-Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfilled Renewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfilled Non-Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Waiting_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Closed Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Onboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting On Client Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting On Client Resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hard Cancel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfilled Renewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfilled Non-Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfilled-Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>--Internal Use Only--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paused:Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paused:No Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>chk_Include_in_Monthly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate in Monthly total Field whether or not to include this prdouct</description>
        <inlineHelpText>Field to indicate in Monthly total Field whether or not to include this prdouct.  Updated automatically based on DEFAULT INCLUDE IN MONTHLY Text field</inlineHelpText>
        <label>Include In Monthly Total</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tinderbox__Include_Content__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked it will include the associated TinderBox content for this product.</description>
        <label>Include Content</label>
        <type>Checkbox</type>
    </fields>
    <validationRules>
        <fullName>CancelReason_Required_On_Cancel</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
Opportunity.RecordType.Name != &apos;USCP Opportunity&apos;,  
OR(
ISCHANGED(Cancellation_Category__c),
ISCHANGED(Cancellation_Reason__c)
),
!ISPICKVAL(Cancellation_Category__c,&quot;&quot;),
ISPICKVAL(Cancellation_Reason__c,&quot;&quot;)
)</errorConditionFormula>
        <errorDisplayField>Cancellation_Reason__c</errorDisplayField>
        <errorMessage>Please select a Cancellation Reason from the picklist</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cancel_NonRenew_Status_Requirements</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
Opportunity.RecordType.Name != &apos;USCP Opportunity&apos;, 
OR(
ISCHANGED(Waiting_Status__c),  
ISCHANGED(Cancellation_Category__c)
),
OR(
ISPICKVAL(Waiting_Status__c,&quot;Cancelled&quot;),
ISPICKVAL(Waiting_Status__c,&quot;Fulfilled Non-Renewal&quot;)
),
OR(
ISBLANK(Waiting_Status_Descr__c),
ISBLANK(TEXT(Cancellation_Category__c)))
)</errorConditionFormula>
        <errorDisplayField>Waiting_Status__c</errorDisplayField>
        <errorMessage>Cancelled or Non-Renewal requires a Cancellation Category selection and Status Descr/Notes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cancel_Removal</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
Opportunity.RecordType.Name != &apos;USCP Opportunity&apos;,
NOT(
OR(
ISPICKVAL(Waiting_Status__c,&quot;Canceled&quot;),
ISPICKVAL(Waiting_Status__c,&quot;Cancelled&quot;),
ISPICKVAL(Waiting_Status__c,&quot;Fulfilled Non-Renewal&quot;)
)),
NOT(ISBLANK(TEXT(Cancellation_Category__c)))
)</errorConditionFormula>
        <errorDisplayField>Cancellation_Category__c</errorDisplayField>
        <errorMessage>Please Clear Cancellation Category if there is not A Canceled or Non-Renewal Status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cancel_Requires_Notes</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
Opportunity.RecordType.Name != &apos;USCP Opportunity&apos;, 
OR(
ISCHANGED(Waiting_Status__c),
ISCHANGED(Waiting_Status_Descr__c )),
OR(
ISPICKVAL(Waiting_Status__c,&quot;Cancelled&quot;),
ISPICKVAL(Waiting_Status__c,&quot;Canceled&quot;)
),
ISBLANK(Waiting_Status_Descr__c ))</errorConditionFormula>
        <errorDisplayField>Waiting_Status_Descr__c</errorDisplayField>
        <errorMessage>Notes Are Required For A Cancelled Status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cancelled_Status_needs_Closed_Won_Stage</fullName>
        <active>true</active>
        <errorConditionFormula>IF(NOT(ISPICKVAL(Opportunity.StageName, &quot;Closed Won&quot;)) &amp;&amp;  ISPICKVAL( Waiting_Status__c , &quot;Cancelled&quot;) , true, false)</errorConditionFormula>
        <errorMessage>Opportunity Products can not be Cancelled if the Opportunity is in a stage other than Closed Won. Please mark the Opportunity as Closed Won in order to cancel the Opportunity Products or contact your manager.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Back_Date_Live_Date</fullName>
        <active>false</active>
        <errorConditionFormula>AND(Live_Date__c &lt; (NOW() - (1/100)), NOT(ISNULL(Live_Date__c)),ISCHANGED( Live_Date__c ))</errorConditionFormula>
        <errorDisplayField>Live_Date__c</errorDisplayField>
        <errorMessage>You cannot back date a Live Date Value.  Please refer to your manager to set prior Live Dates</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Enter_Live_Date_Unchecked</fullName>
        <active>false</active>
        <errorConditionFormula>AND(NOT(ISNULL(Live_Date__c)), Live__c = False,ISCHANGED( Live_Date__c ))</errorConditionFormula>
        <errorDisplayField>Live__c</errorDisplayField>
        <errorMessage>You must check the &apos;Live&apos; checkbox to set the Live Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dig_AM_Requirement_for_Status</fullName>
        <active>false</active>
        <errorConditionFormula>AND( Opportunity.Dig_Account_Manager__c = Null, NOT(ISPICKVAL(Waiting_Status__c,&quot;&quot;)),Opportunity.Digital_Products_Notice__c = True, NOT(Opportunity.RecordTypeId=&quot;012F0000000y9rk&quot;))</errorConditionFormula>
        <errorDisplayField>Waiting_Status__c</errorDisplayField>
        <errorMessage>You Must Have A Digital Account Manager Assigned To The Opportunity Prior To Assigning A Status To Any Product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IssueNotes_Required_On_Cancel</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
Opportunity.RecordType.Name != &apos;USCP Opportunity&apos;, 
OR(
ISNULL(Waiting_Status_Descr__c),
Waiting_Status_Descr__c=&quot;Empty&quot;
),
ISPICKVAL(Waiting_Status__c ,&quot;Cancelled&quot;)
)</errorConditionFormula>
        <errorDisplayField>Waiting_Status_Descr__c</errorDisplayField>
        <errorMessage>Please Enter a Description of the Cancelation Reason/s</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IssueNotes_Required_On_Waiting</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
Waiting_Status_Descr__c = Null,
OR(
ISPICKVAL( Waiting_Status__c ,&quot;Waiting On Client Resource&quot;),
ISPICKVAL(Waiting_Status__c,&quot;Waiting On Client Approval&quot;)
)
)</errorConditionFormula>
        <errorDisplayField>Waiting_Status_Descr__c</errorDisplayField>
        <errorMessage>Please Enter a Description of the Waiting Reason</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>List_Change_Permissions</fullName>
        <active>false</active>
        <description>Only allow changes to prices on Setup product or Component Product Family</description>
        <errorConditionFormula>and
(ISPICKVAL(Product2.Family, &quot;&quot;),
( Product2.Name &lt;&gt; &quot;Setup Fee&quot;))</errorConditionFormula>
        <errorDisplayField>UnitPrice</errorDisplayField>
        <errorMessage>Sorry, pricing modifications are only allowed on setup or components.  Contact your manager.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_Fields_Update_on_ILI_Gen</fullName>
        <active>true</active>
        <description>Lock Invoice related fields on OLI that effects ILIs after ILIs have been generated</description>
        <errorConditionFormula>AND(
Has_ILI__c,
OR(
ISCHANGED(UnitPrice),
ISCHANGED(TotalPrice),
ISCHANGED(Quantity),
ISCHANGED(Qty_ContractMonths__c),
ISCHANGED(NumberOfHours__c),
ISCHANGED(Email_Recipients_Qty__c),
ISCHANGED(NumberOfLocations__c),
ISCHANGED(Invoice_PriceVariable__c),
ISCHANGED(Mgmt_Fee_Percent__c),
ISCHANGED(Invoice_CancelFeePercent__c),
ISCHANGED(Invoice_ServiceStartDate__c),
ISCHANGED(Discount)
)
/*,NOT($Profile.Name==&apos;System Administrator&apos;)*/
)</errorConditionFormula>
        <errorMessage>Fields involved in Invoice processing cannot be updated once the ILI&apos;s have been generated. Please contact Salesforce Support via support ticket for further assistance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_OLI_After_Replication</fullName>
        <active>true</active>
        <description>Don&apos;t allow edits if the the Associated Opp has been replicated</description>
        <errorConditionFormula>AND(
OR(
Opportunity.Opportunity_IsReplicated__c = true,
NOT(ISBLANK(ReplicationOLI_TargetID__c))) 
/*,NOT($Profile.Name==&apos;System Administrator&apos;)*/)</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>This Opportunity Product has been replicated and can no longer be edited</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Non_USCP_Cannot_Select_HardCancel</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
Opportunity.RecordType.Name != &apos;USCP Opportunity&apos;,
ISCHANGED(Waiting_Status__c),
ISPICKVAL(Waiting_Status__c,&quot;Hard Cancel&quot;)
)</errorConditionFormula>
        <errorDisplayField>Waiting_Status__c</errorDisplayField>
        <errorMessage>Hard Cancel is not a valid option for this Opportunity type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Admin_change_Live_Date</fullName>
        <active>true</active>
        <description>Only Admins are allowed to change live dates</description>
        <errorConditionFormula>ISCHANGED( Live_Date__c )
&amp;&amp; !ISNULL(Live_Date__c) 
&amp;&amp; !Contains($Profile.Name,&apos;Admin&apos;)</errorConditionFormula>
        <errorDisplayField>Live_Date__c</errorDisplayField>
        <errorMessage>Only Admins have access to change the live date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pending_Requires_Notes</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Waiting_Status__c,&quot;Pending&quot;),ISBLANK( Waiting_Status_Descr__c ),DATEVALUE(CreatedDate)&gt;=DATE(2013,3,28))</errorConditionFormula>
        <errorDisplayField>Waiting_Status_Descr__c</errorDisplayField>
        <errorMessage>Notes Are Required For A Pending Status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quantity_Must_Be_An_Integer</fullName>
        <active>true</active>
        <description>The quantity field (which translates into periods) can only be an integer. Decimals are not allowed.</description>
        <errorConditionFormula>FLOOR( Quantity ) &lt;&gt;  Quantity</errorConditionFormula>
        <errorDisplayField>Quantity</errorDisplayField>
        <errorMessage>Please enter a whole number for Periods.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Setup_Fee_List_Change_OK_Nothing_Else</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
ListPrice &lt;&gt; UnitPrice ,
ISPICKVAL(Product2.Family,&quot;&quot;) , 
HasRevenueSchedule =FALSE


)</errorConditionFormula>
        <errorDisplayField>UnitPrice</errorDisplayField>
        <errorMessage>Sorry, pricing modifications are not allowed on items that are not components or setup up fees. Contact your manager.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Seven_Days_Start_Date_Force</fullName>
        <active>false</active>
        <errorConditionFormula>AND(NOT(Opportunity.IsClosed), ServiceDate&lt;(TODAY()+7))</errorConditionFormula>
        <errorDisplayField>ServiceDate</errorDisplayField>
        <errorMessage>Start Date cannot be less than 7 days from Today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_Force</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNULL(ServiceDate), Product2.Digital_No_Start_Date_Req__c  = False )</errorConditionFormula>
        <errorDisplayField>ServiceDate</errorDisplayField>
        <errorMessage>You must enter a Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_Force_Old</fullName>
        <active>false</active>
        <errorConditionFormula>ISNULL(ServiceDate)</errorConditionFormula>
        <errorDisplayField>ServiceDate</errorDisplayField>
        <errorMessage>You must enter a Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>USCP_CancelDate_Removal</fullName>
        <active>true</active>
        <description>If we remove Invoice Cancel Date for USCP Opportunity Product then remove Waiting Status Desc ,Cancellation Category and Cancellation reason</description>
        <errorConditionFormula>AND( 
Opportunity.RecordType.Name == &apos;USCP Opportunity&apos;, 
ISBLANK(Invoice_CancelDate__c),
OR(
NOT(ISBLANK(TEXT(Cancellation_Category__c))),
NOT(ISBLANK(TEXT(Cancellation_Detail__c ))),
NOT(ISBLANK(TEXT(Cancellation_Reason__c))) 
) 
)</errorConditionFormula>
        <errorMessage>Please clear the selected Cancellation Reason, Cancellation Category  and Cancellation Detail.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>USCP_CancelDate_Requires_Notes_Category</fullName>
        <active>true</active>
        <description>If there is Invoice Cancel Date on USCP Opportunity Product then Notes , Cancellation Category and Cancellation Reason are required.</description>
        <errorConditionFormula>AND( 
Opportunity.RecordType.Name == &apos;USCP Opportunity&apos;, 
NOT(ISBLANK(Invoice_CancelDate__c)),  
OR( 
ISBLANK(Waiting_Status_Descr__c), 
ISBLANK(TEXT(Cancellation_Category__c)),
ISBLANK(TEXT(Cancellation_Reason__c)) 
)
)</errorConditionFormula>
        <errorMessage>Please enter data in all fields.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>USCP_Cancel_Or_HardCancel_Removal</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
Opportunity.RecordType.Name == &apos;USCP Opportunity&apos;,
ISCHANGED(Waiting_Status__c),
OR(
ISPICKVAL(PRIORVALUE(Waiting_Status__c),&quot;Canceled&quot;),
ISPICKVAL(PRIORVALUE(Waiting_Status__c),&quot;Cancelled&quot;),
ISPICKVAL(PRIORVALUE(Waiting_Status__c),&quot;Hard Cancel&quot;)
),
NOT(ISBLANK(Invoice_CancelDate__c))
)</errorConditionFormula>
        <errorMessage>You cannot change the status of this Opportunity Product because it has been cancelled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>USCP_InvoiceCancelDate_Max_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
Opportunity.RecordType.Name == &apos;USCP Opportunity&apos;, 
ISCHANGED(Invoice_CancelDate__c), 
Invoice_CancelDate__c &gt; Invoice_ServiceEndDate__c,
NOT(ISBLANK(Invoice_ServiceEndDate__c))
)</errorConditionFormula>
        <errorMessage>Cancel Date must be less than or equal to the Service End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>USCP_InvoiceCancelDate_Min_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
Opportunity.RecordType.Name == &apos;USCP Opportunity&apos;,
ISCHANGED(Invoice_CancelDate__c), 
Invoice_CancelDate__c &lt; Today()
)</errorConditionFormula>
        <errorMessage>Please Enter a date of today or in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>USCP_OLIStatusToClosedWon_OnlyFinance</fullName>
        <active>true</active>
        <description>Only Finance Users are able to update the Status to &apos;Closed Won&apos; Please contact your manager or Finance for further assistance.</description>
        <errorConditionFormula>AND(
Opportunity.RecordType.Name == &apos;USCP Opportunity&apos;,
ISCHANGED(Waiting_Status__c),
ISPICKVAL(Waiting_Status__c, &apos;Closed Won&apos;),
NOT(
OR($Profile.Name == &apos;SML Customer Care&apos;,
$Profile.Name == &apos;SML Customer Care /Encrypted Field Access&apos;,
$Profile.Name == &apos;System Administrator&apos;)))</errorConditionFormula>
        <errorDisplayField>Waiting_Status__c</errorDisplayField>
        <errorMessage>Only Finance Users are able to update the Status to &apos;Closed Won&apos; Please contact your manager or Finance for further assistance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Number_Of_Contract_Months</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
MOD(Qty_ContractMonths__c,1)!=0,
Qty_ContractMonths__c &lt;=0)</errorConditionFormula>
        <errorDisplayField>Qty_ContractMonths__c</errorDisplayField>
        <errorMessage>Please Enter a Valid Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Number_Of_Locations</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
MOD(NumberOfLocations__c,1)!=0,
NumberOfLocations__c &lt;=0)</errorConditionFormula>
        <errorDisplayField>NumberOfLocations__c</errorDisplayField>
        <errorMessage>Please Enter A Valid Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Number_of_Line_Items</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
MOD(Qty_LineItems__c,1)!=0,
Qty_LineItems__c&lt;=0)</errorConditionFormula>
        <errorDisplayField>Qty_LineItems__c</errorDisplayField>
        <errorMessage>Please Enter a Valid Number</errorMessage>
    </validationRules>
</CustomObject>